Fixed alignment issues.

--- a/view/src/styles/components/catalogue.scss
+++ b/view/src/styles/components/catalogue.scss
@@ -32,15 +32,20 @@
     }
 
     .product-card {
-        background-color: whitesmoke;
+        background-color: white;
+        height: 100%;
+
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
 
         .product-header {
+            background-color: whitesmoke;
             padding: 10px;
             padding-bottom: 5px;
         }
 
         .product-content {
-            background-color: white;
             text-align: left;
 
             display: flex;
@@ -58,7 +63,6 @@
         }
 
         .product-actions {
-            // background-color: white;
             align-items: stretch;
             justify-content: space-around;
 
@@ -83,8 +87,13 @@
 
                 input {
                     text-align: center;
-                    background-color: white;
+                    background-color: whitesmoke;
                 }
+            }
+
+            .sub-text {
+                font-size: 0.75rem;
+                color: gray;
             }
 
 
